test/files/neg/wellkinded_app.check
wellkinded_app.scala:3: error: x does not take type parameters
  type t = x[x]
           ^
one error found
